plugins/groovy/testdata/highlighting/ExtendingOwnInner.groovy
class Foo extends Inner implements <error descr="Cannot resolve symbol 'Unknown'">Unknown</error> {
  static class Inner {}
}